[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "repomem"
version = "0.4.0"
description = "Persistent memory for AI coding agents — SQLite + FTS5, zero dependencies"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "RepoMem Contributors" }]
keywords = ["claude", "ai", "memory", "persistent", "sqlite", "developer-tools", "mcp", "claude-code"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = []   # stdlib only — the default install stays zero-dependency

[project.optional-dependencies]
# Opt-in semantic search. Never pulled by the default `pip install repomem`.
semantic = ["sentence-transformers>=2.2"]

[project.scripts]
repomem = "repomem.cli:main"

[project.urls]
Homepage = "https://github.com/SUDARSHANCHAUDHARI/RepoMem"
Repository = "https://github.com/SUDARSHANCHAUDHARI/RepoMem"
Issues = "https://github.com/SUDARSHANCHAUDHARI/RepoMem/issues"

[tool.setuptools.packages.find]
include = ["repomem*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
